Додано та налаштовано gh-pages

--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "app-hello-my-freund-angular",
   "version": "0.0.0",
+  "homepage": ".",
+
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "predeploy": "npm run build", 
+    "deploy": "gh-pages -d dist/app_hello_my_freund_angular/browser",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -26,6 +30,7 @@
     "@angular/cli": "^19.2.10",
     "@angular/compiler-cli": "^19.2.0",
     "@types/jasmine": "~5.1.0",
+    "gh-pages": "^6.3.0",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
